--- a/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
+++ b/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
@@ -1,5 +1,12 @@
 title: Analisi dei Requisiti
 changelog:
+  - version: "0.30.0"
+    date: "2026-01-25"
+    authors:
+      - Alessandro Mazzariol
+    verifier: TBD
+    description: >
+      Aggiunta requisiti di Vincolo e di Qualità e correzioni di numeri e UC mancanti.
   - version: "0.29.3"
     date: "2026-01-18"
     authors:
