--- a/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
+++ b/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
@@ -1,5 +1,12 @@
 title: Piano di Qualifica 
 changelog:
+  - version: "0.4.0"
+    date: "2026-01-27"
+    authors:
+      - Alessandro Contarini
+    verifier: TBD
+    description: >
+      Aggiunti Test di unità 
   - version: "0.3.0"
     date: "2025-12-13"
     authors:
@@ -29,3 +36,4 @@ changelog:
     verifier: Valerio Solito
     description: >
       Prima bozza struttura del documento
+
