--- a/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
+++ b/docs/12-rtb/docest/analisi_requisiti/analisi_requisiti.meta.yaml
@@ -1,5 +1,12 @@
 title: Analisi dei Requisiti
 changelog:
+  - version: "0.33.1"
+    date: "2026-01-28"
+    authors:
+      - Alessandro Mazzariol
+    verifier: TBD
+    description: >
+      Fix ortografia
   - version: "0.33.0"
     date: "2026-01-28"
     authors:
