--- a/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
+++ b/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
@@ -4,7 +4,7 @@ changelog:
     date: "2026-01-27"
     authors:
       - Alessandro Contarini
-    verifier: TBD
+    verifier: Alessandro Mazzariol
     description: >
       Aggiunti Test di unità 
   - version: "0.3.0"
