--- a/docs/12-rtb/verbest/verbest_2026-01-14/verbest_2026-01-14.meta.yaml
+++ b/docs/12-rtb/verbest/verbest_2026-01-14/verbest_2026-01-14.meta.yaml
@@ -4,6 +4,6 @@ changelog:
     date: "2026-01-23"
     authors:
       - Leonardo Preo
-    verifier: TBD
+    verifier: Alessandro Mazzariol
     description: >
       Prima bozza del verbale
