--- a/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
+++ b/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
@@ -1,5 +1,12 @@
 title: Piano di Qualifica 
 changelog:
+  - version: "0.5.0"
+    date: "2026-02-01"
+    authors:
+      - Mario De Pasquale
+    verifier: TBD
+    description: >
+      Aggiunti Test di integrazione
   - version: "0.4.0"
     date: "2026-01-27"
     authors:
