docs(norme): aggiunta sezione jira e modifiche al lib.typ

--- a/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
+++ b/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
@@ -1,5 +1,12 @@
 title: Norme di Progetto
 changelog:
+  - version: "0.7.0"
+    date: "2026-02-01"
+    authors:
+      - Valerio Solito
+    verifier: TDB
+    description: >
+      Aggiunta sezione Jira, modificato anche lib.typ
   - version: "0.6.0"
     date: "2026-01-12"
     authors:
