fix(norme): sistemato meta yaml NT-220

--- a/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
+++ b/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
@@ -4,7 +4,7 @@ changelog:
     date: "2026-02-01"
     authors:
       - Valerio Solito
-    verifier: TDB
+    verifier: TBD
     description: >
       Aggiunta sezione Jira, modificato anche lib.typ
   - version: "0.6.0"
