fix(norme): sistemato spellcheck e formatting NT-220

--- a/.hunspell/ignore.yaml
+++ b/.hunspell/ignore.yaml
@@ -69,6 +69,7 @@ accepted_words:
   - pdf
   - Typst
   - YAML
+  - typ
 
   # --- Terminologia Software Engineering (SWE) ---
   - ACK
@@ -101,6 +102,8 @@ accepted_words:
   - UI
   - versionamento
   - subfiles
+  - auth
+  - Burndown
 
   # --- Terminologia Standard Progetto ---
   - docest
