--- a/docs/12-rtb/verbest/verbest_2026-01-28/verbest_2026-01-28.meta.yaml
+++ b/docs/12-rtb/verbest/verbest_2026-01-28/verbest_2026-01-28.meta.yaml
@@ -4,6 +4,6 @@ changelog:
     date: "2026-01-28"
     authors:
       - Mario De Pasquale
-    verifier: TBD
+    verifier: Alessandro Mazzariol
     description: >
       Prima bozza del verbale
