--- a/docs/12-rtb/verbest/verbest_2026-01-28/verbest_2026-01-28.meta.yaml
+++ b/docs/12-rtb/verbest/verbest_2026-01-28/verbest_2026-01-28.meta.yaml
@@ -4,7 +4,7 @@ changelog:
     date: "2026-02-01"
     authors:
       - Mario De Pasquale
-    verifier: TBD
+    verifier: Alessandro Mazzariol
     description: >
       Correzioni errori di battitura
   - version: "0.0.1"
