--- a/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
+++ b/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
@@ -4,7 +4,7 @@ changelog:
     date: "2026-02-01"
     authors:
       - Valerio Solito
-    verifier: TBD
+    verifier: Alessandro Mazzariol
     description: >
       Aggiunta sezione Jira, modificato anche lib.typ
   - version: "0.6.0"
@@ -28,7 +28,7 @@ changelog:
       - Mario De Pasquale
     verifier: Matteo Mantoan
     description: >
-        Aggiustamento ore produttive per sprint
+      Aggiustamento ore produttive per sprint
   - version: "0.4.0"
     date: "2025-11-16"
     authors:
@@ -36,28 +36,28 @@ changelog:
       - Mario De Pasquale
     verifier: Matteo Mantoan
     description: >
-        Aggiunta specifica criteri rotazione dei ruoli
+      Aggiunta specifica criteri rotazione dei ruoli
   - version: "0.3.1"
     date: "2025-11-05"
     authors:
       - Leonardo Preo
     verifier: Francesco Marcon
     description: >
-        Sostituzione Figura 1 "Ciclo di vita dei documenti" 
+      Sostituzione Figura 1 "Ciclo di vita dei documenti"
   - version: "0.3.0"
     date: "2025-11-04"
     authors:
       - Leonardo Preo
     verifier: Matteo Mantoan
     description: >
-        Modifica spiegazione commit e verifica
+      Modifica spiegazione commit e verifica
   - version: "0.2.0"
     date: "2025-11-04"
     authors:
       - Leonardo Preo
     verifier: Francesco Marcon
     description: >
-        Modifica ciclo di vita del documento - nuova tecnica di versionamento
+      Modifica ciclo di vita del documento - nuova tecnica di versionamento
   - version: "0.1.0"
     date: "2025-10-31"
     authors:
@@ -65,7 +65,7 @@ changelog:
       - Matteo Mantoan
     verifier: Alessandro Mazzariol
     description: >
-        Prima stesura
+      Prima stesura
   - version: "0.0.1"
     date: "2025-10-30"
     authors:
@@ -74,4 +74,4 @@ changelog:
       - Francesco Marcon
     verifier: Alessandro Mazzariol
     description: >
-        Prima bozza delle Norme di Progetto
+      Prima bozza delle Norme di Progetto
