--- a/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
+++ b/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
@@ -1,5 +1,12 @@
 title: Piano di Qualifica 
 changelog:
+  - version: "0.7.0"
+    date: "2026-02-04"
+    authors:
+      - Alessandro Contarini
+    verifier: TBD
+    description: >
+      Finita la sezione di Testing.
   - version: "0.6.0"
     date: "2026-02-03"
     authors:
