Update verifier name in meta.yaml

--- a/docs/12-rtb/slides/ddb_2026-01-26/ddb_2026-01-26.meta.yaml
+++ b/docs/12-rtb/slides/ddb_2026-01-26/ddb_2026-01-26.meta.yaml
@@ -4,6 +4,6 @@ changelog:
     date: "2026-01-25"
     authors:
       - Mario De Pasquale
-    verifier: TBD
+    verifier: Leonardo Preo
     description: >
       Creazione del diario di Bordo
