doc-norme_progetto v0.8.0 NT-308 (#106)
* aggiunta sezioni Fornitura e Sviluppo nei processi primari NT-308

* fix di parole

* fix spelling

* fix

* fix(norme) Passato spellcheck e format check, sistemato meta yaml

---------

Co-authored-by: valerio solito <valerio.solito@studenti.unipd.it>

--- a/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
+++ b/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
@@ -1,5 +1,12 @@
 title: Norme di Progetto
 changelog:
+  - version: "0.8.0"
+    date: "2026-02-02"
+    authors:
+      - Valerio Solito
+    verifier: Alessandro Mazzariol
+    description: >
+      Aggiunta sezione Fornitura e Sviluppo nei processi primari
   - version: "0.7.0"
     date: "2026-02-01"
     authors:
