--- a/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
+++ b/docs/12-rtb/docest/piano_qualifica/piano_qualifica.meta.yaml
@@ -14,7 +14,7 @@ changelog:
       - Alessandro Contarini
     verifier: Leonardo Preo
     description: >
-      Fixati test di Integrazione e di Unità e aggiunta bozza Test di Sistema
+      Fix test di Integrazione e di Unità e aggiunta bozza Test di Sistema
   - version: "0.5.0"
     date: "2026-02-01"
     authors:
