--- a/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
+++ b/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
@@ -1,5 +1,12 @@
 title: Norme di Progetto
 changelog:
+  - version: "0.9.0"
+    date: "2026-02-04"
+    authors:
+      - Francesco Marcon
+    verifier: TBD
+    description: >
+      Aggiunta sezione "Gestione di configurazioni" in Processi di Supporto
   - version: "0.8.0"
     date: "2026-02-02"
     authors:
