doc-norme-progetto-v0.10.0 - Aggiunta prima versione delle sezioni di verifica e validazione nei processi di supporto. È una prima versione va aggiornata.

--- a/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
+++ b/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
@@ -6,7 +6,7 @@ changelog:
       - Francesco Marcon
     verifier: TBD
     description: >
-      Aggiunta sezione "Accertamento della Qualità" in Processi di Supporto
+      Aggiunta sezione "Accertamento della Qualità", "Verifica" e "Validazione" in Processi di Supporto
   - version: "0.9.0"
     date: "2026-02-04"
     authors:
