Change verifier from TBD to Leonardo Preo
Updated verifier information for document versions.

--- a/docs/12-rtb/docest/analisi_stato_arte/analisi_stato_arte.meta.yaml
+++ b/docs/12-rtb/docest/analisi_stato_arte/analisi_stato_arte.meta.yaml
@@ -4,13 +4,13 @@ changelog:
     date: "2026-02-04"
     authors:
       - Francesco Marcon
-    verifier: TBD
+    verifier: Leonardo Preo
     description: >
       Correzioni di forma e rimozione di alcune sezione
   - version: "0.0.1"
     date: "2026-02-04"
     authors:
       - Francesco Marcon
-    verifier: TBD
+    verifier: Leonardo Preo
     description: >
       Prima stesura del documento
