--- a/.hunspell/ignore.yaml
+++ b/.hunspell/ignore.yaml
@@ -2,18 +2,18 @@
 # Sostituzioni preliminari per correggere caratteri tipografici che confondono Hunspell.
 # Questo dovrebbe risolvere il problema dei falsi positivi su "L'", "dell'", "un'", ecc.
 normalizations:
-  "’": "'"  # Apostrofo tipografico -> Apostrofo ASCII
-  "“": '"'  # Virgolette aperte
-  "”": '"'  # Virgolette chiuse
+  "’": "'" # Apostrofo tipografico -> Apostrofo ASCII
+  "“": '"' # Virgolette aperte
+  "”": '"' # Virgolette chiuse
 
 # 2. PATTERN DA IGNORARE (Regex)
 # Rimuove codici tecnici e sigle numerate prima del controllo.
 ignore_patterns:
-  - '\b(UC|UCS)\d*\b'     # UC/UCS
-  - '\bv\d+\b'            # versioni (v1, v2, ecc.)
+  - '\b(UC|UCS)\d*\b' # UC/UCS
+  - '\bv\d+\b' # versioni (v1, v2, ecc.)
 
 # 3. DIZIONARIO PERSONALIZZATO
-# Parole specifiche da considerare corrette. 
+# Parole specifiche da considerare corrette.
 # -------------------------------------------------------------------------
 # GUIDA ALLA CASE SENSITIVITY (Come aggiungere nuove parole)
 # Hunspell applica regole gerarchiche in base al casing usato in questa lista:
@@ -93,8 +93,8 @@ accepted_words:
   - Kubernetes
   - HTTPS
   - WebSocket
-
-
+  - TimescaleDB
+  - Hypertables
 
   # --- Terminologia Software Engineering (SWE) ---
   - ACK
@@ -137,7 +137,6 @@ accepted_words:
   - Precondizioni
   - namespace
 
-
   # --- Terminologia Standard Progetto ---
   - docest
   - docint
@@ -145,7 +144,7 @@ accepted_words:
   - verbint
   - EP
   - roadmap
-  - RO    # --- Starebbe per RO1 all'interno del PdP, ma scrivendo RO1 non lo prende ---
+  - RO # --- Starebbe per RO1 all'interno del PdP, ma scrivendo RO1 non lo prende ---
   - microservizi
   - onboarding
   - L'Auth
@@ -173,7 +172,6 @@ accepted_words:
   - RangeInvalido
   - NessunDato
 
-
   # --- Parole Italiane mancanti / Neologismi ---
   - ciclomatica
   - efficientare
@@ -181,6 +179,7 @@ accepted_words:
   - manutenibile
   - modularizzazione
   - possiede
+  - deployata
   - prioritizzare
   - riallocando
   - riallocazione
@@ -192,7 +191,6 @@ accepted_words:
   - yyyy
   - sottocasi
   - sottocaso
-  - catagolazione
   - un'app
   - impersonificare
   - l'ID
@@ -206,6 +204,12 @@ accepted_words:
   - dell'Owner
   - dell'API
   - istanziati
+  - istanziazione
   - l'endpoint
+  - idempotente
+  - loggata
+  - l'automiglioramento
   - failover
   - provisionato
+  - d'esami
+  - decifratura
