--- a/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
+++ b/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
@@ -1,5 +1,12 @@
 title: Norme di Progetto
 changelog:
+  - version: "0.11.0"
+    date: "2026-02-06"
+    authors:
+      - Alessandro Contarini
+    verifier: TBD
+    description: >
+      Stesura bozza metriche di qualità di processo
   - version: "0.10.0"
     date: "2026-02-05"
     authors:
