--- a/.hunspell/ignore.yaml
+++ b/.hunspell/ignore.yaml
@@ -2,18 +2,18 @@
 # Sostituzioni preliminari per correggere caratteri tipografici che confondono Hunspell.
 # Questo dovrebbe risolvere il problema dei falsi positivi su "L'", "dell'", "un'", ecc.
 normalizations:
-  "’": "'"  # Apostrofo tipografico -> Apostrofo ASCII
-  "“": '"'  # Virgolette aperte
-  "”": '"'  # Virgolette chiuse
+  "’": "'" # Apostrofo tipografico -> Apostrofo ASCII
+  "“": '"' # Virgolette aperte
+  "”": '"' # Virgolette chiuse
 
 # 2. PATTERN DA IGNORARE (Regex)
 # Rimuove codici tecnici e sigle numerate prima del controllo.
 ignore_patterns:
-  - '\b(UC|UCS)\d*\b'     # UC/UCS
-  - '\bv\d+\b'            # versioni (v1, v2, ecc.)
+  - '\b(UC|UCS)\d*\b' # UC/UCS
+  - '\bv\d+\b' # versioni (v1, v2, ecc.)
 
 # 3. DIZIONARIO PERSONALIZZATO
-# Parole specifiche da considerare corrette. 
+# Parole specifiche da considerare corrette.
 # -------------------------------------------------------------------------
 # GUIDA ALLA CASE SENSITIVITY (Come aggiungere nuove parole)
 # Hunspell applica regole gerarchiche in base al casing usato in questa lista:
@@ -95,8 +95,6 @@ accepted_words:
   - WebSocket
   - TCP
 
-
-
   # --- Terminologia Software Engineering (SWE) ---
   - ACK
   - Acknowledgement
@@ -139,7 +137,6 @@ accepted_words:
   - namespace
   - Serverless
 
-
   # --- Terminologia Standard Progetto ---
   - docest
   - docint
@@ -147,7 +144,7 @@ accepted_words:
   - verbint
   - EP
   - roadmap
-  - RO    # --- Starebbe per RO1 all'interno del PdP, ma scrivendo RO1 non lo prende ---
+  - RO # --- Starebbe per RO1 all'interno del PdP, ma scrivendo RO1 non lo prende ---
   - microservizi
   - onboarding
   - L'Auth
@@ -175,7 +172,6 @@ accepted_words:
   - RangeInvalido
   - NessunDato
 
-
   # --- Parole Italiane mancanti / Neologismi ---
   - ciclomatica
   - efficientare
@@ -194,7 +190,6 @@ accepted_words:
   - yyyy
   - sottocasi
   - sottocaso
-  - catagolazione
   - un'app
   - impersonificare
   - l'ID
@@ -211,3 +206,7 @@ accepted_words:
   - l'endpoint
   - failover
   - provisionato
+  - deployata
+  - loggata
+  - idempotente
+  - istanziazione
