--- a/docs/12-rtb/verbest/verbest_2026-02-06/verbest_2026-02-06.meta.yaml
+++ b/docs/12-rtb/verbest/verbest_2026-02-06/verbest_2026-02-06.meta.yaml
@@ -4,6 +4,6 @@ changelog:
     date: "2026-02-06"
     authors:
       - Valerio Solito
-    verifier: TBD
+    verifier: Alessandro Mazzariol
     description: >
       Prima bozza del verbale
