--- a/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
+++ b/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
@@ -1,5 +1,12 @@
 title: Norme di Progetto
 changelog:
+  - version: "0.11.0"
+    date: "2026-02-05"
+    authors:
+      - Valerio Solito
+    verifier: TBD
+    description: >
+      Completamento sezione 4 e sistemata struttura documento
   - version: "0.10.0"
     date: "2026-02-05"
     authors:
