--- a/docs/12-rtb/verbest/verbest_2026-01-28/verbest_2026-01-28.meta.yaml
+++ b/docs/12-rtb/verbest/verbest_2026-01-28/verbest_2026-01-28.meta.yaml
@@ -1,5 +1,12 @@
 title: Verbale Esterno 2026-01-28 (M31)
 changelog:
+  - version: "0.2.0"
+    date: "2026-02-07"
+    authors:
+      - Valerio Solito
+    verifier: TBD
+    description: >
+      Aggiunta firma azienda
   - version: "0.1.1"
     date: "2026-02-01"
     authors:
