docs(verbest): Bozza verbest 06-02-2026 NT-331 (#114)
* docs(verbest): Bozza verbest 06-02-2026 NT-331

* fix(verbest): Sistemato meta yaml NT-331

* messo verificatore

* fix (verbest): Sistemato metadata NT-331

* fix(verbest): Aggiunta firma al verbest precedente

* fix(verbest): modificato meta yaml scorso verbale

* Update version and verifier in meta.yaml

---------

Co-authored-by: Scafu <alessandro.mazzariol04@gmail.com>
Co-authored-by: Alessandro Mazzariol <107548899+Scafu@users.noreply.github.com>

--- a/docs/12-rtb/verbest/verbest_2026-01-28/verbest_2026-01-28.meta.yaml
+++ b/docs/12-rtb/verbest/verbest_2026-01-28/verbest_2026-01-28.meta.yaml
@@ -1,5 +1,12 @@
 title: Verbale Esterno 2026-01-28 (M31)
 changelog:
+  - version: "1.0.0"
+    date: "2026-02-07"
+    authors:
+      - Valerio Solito
+    verifier: Alessandro Mazzariol
+    description: >
+      Aggiunta firma azienda
   - version: "0.1.1"
     date: "2026-02-01"
     authors:
