doc-norme-progetto-v0.14.0 - Aggiunta sezione formazione nei processi organizzativi

--- a/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
+++ b/docs/12-rtb/docint/norme_progetto/norme_progetto.meta.yaml
@@ -1,5 +1,12 @@
 title: Norme di Progetto
 changelog:
+  - version: "0.14.0"
+    date: "2026-02-07" 
+    authors:
+      - Francesco Marcon
+    verifier: TBD
+    description: >
+      Aggiunta sezione di "Processo di Formazione"
   - version: "0.13.0"
     date: "2026-02-07"
     authors:
